--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "2.0.5",
     "react-spinkit": "^3.0.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "xml-js": "^1.6.8"
   },
   "scripts": {
